2003-05-31  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	set the version to 2.4.17

2003-05-30  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/builtins.c:
	* fvwm/fvwm2.1:
	SetEnv with only one parameter is ignored now

	* acinclude.m4:
	cause configure print good usage with autoconf >= 2.53

	* fvwm/fvwm2.1:
	* docs/fvwm.lsm.in:
	* NEWS:
	updated dates for the 2.4.16 release

2003-05-29  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/virtual.c (CMD_GotoDeskAndPage):
	fixed "GotoDeskAndPage prev" on desks larger than 2x2

	* fvwm/functions.c (expand_extended_var):
	(expand):
	fixed expanding variables that are empty, for example $[w.resource]
	or $[version.info] or $[EMPTY_STRING];
	actually add announced earlier $[desk.pagesx] and $[desk.pagesy]

2003-05-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (do_menu):
	fixed warping pointer to first menu item when invoked with the mouse

2003-05-28  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/ConfigFvwmDefaults:
	* fvwm/fvwm2.1:
	* fvwm/windowlist.c:
	* NEWS:
	WindowListFunc is executed now within a window context,
	so "WindowId $0" is not needed anymore in its definition.
	Documented FvwmEvent behaviour of executing window related event
	handlers within a window context.

2003-05-27  olicha  <olivier.chapuis@free.fr>

	* fvwm/icons.c (CreateIconWindow):
	(DrawIconWindow):
	(GetIconBitmap):
	Fixed loading of application supplied pixmap on 8/24 depth screen

2003-05-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (DoSetFocus):
	don't fiddle with the window list for windows that are going to be
	destroyed

	* fvwm/add_window.c (delete_client_context):
	(destroy_auxiliary_windows):
	(destroy_window):
	fixed empty frame windows when X reused the window id for a new window
	while the old one was scheduled to be destroyed

	* fvwm/add_window.c (destroy_window):
	fixed a core dump when window was destroyed twice in a complex function

2003-05-26  Dan Espen  <dane@mk.telcordia.com>
