@@ -26,6 +26,13 @@
 #include <stdio.h>
 #include <math.h>
 
+/* Define some standard constants that are not defined on QNX 4.25 */
+#ifndef M_PI
+#define M_PI 3.14159265358979323846
+#endif
+#ifndef M_PI_2
+#define M_PI_2 1.57079632679489661923
+#endif
 
 /* Draws the relief pattern around a window
  * Draws a line_width wide rectangle from (x,y) to (x+w,y+h) i.e w+1 wide,
