@@ -1,3 +1,8 @@
+2003-06-10  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* libs/Graphics.c:
+	define M_PI and M_PI_2 if they are not defined by math.h
+
 2003-05-31  Mikhael Goikhman  <migo@homemail.com>
 
 	* configure.in:
